--- a/src/App.css
+++ b/src/App.css
@@ -2046,6 +2046,7 @@ html {
 @media (min-width: 769px) and (max-width: 1600px) {
   .hero-content {
     padding-top: 6rem;
+    max-width: 700px;
   }
 
   .hero-badge {
@@ -2055,14 +2056,22 @@ html {
   }
 
   .hero-title {
-    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .hero-title-main {
+    font-size: 3.5rem;
+    font-weight: 200;
+    white-space: nowrap;
     margin-bottom: 1rem;
   }
 
   .hero-title-sub {
-    font-size: 1.75rem;
+    font-size: 1rem;
     padding-left: 2rem;
     margin-top: 0.5rem;
+    font-weight: 400;
+    letter-spacing: 0.3em;
   }
 
   .hero-divider {
